--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,10 @@ a:hover {
 */
 .responsive_mobile_menu {
   background-color: var(--primary);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 .mobile_wrapper {
